--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: "^0.10.0"
+  google_fonts: ^2.0.0
 flutter_icons:
   android: "launcher_icon"
   ios: true
@@ -83,17 +84,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+     - family: Booter-Zero-zero
+       fonts:
+         - asset: asset/Font/Booter-Zero-zero.ttf
   #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  #        style: italic
+  # - family: Trajan Pro
+  #fonts:
+  #- asset: fonts/TrajanPro.ttf
+  #- asset: fonts/TrajanPro_Bold.ttf
+  #weight: 700
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
