--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  contacts_service: ^0.6.3
-
+  contacts_service: "^0.6.3"
+  text_scroll: ^0.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -49,6 +49,7 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "asset/icons/Gm.png"
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -67,7 +68,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - asset/icons/Gm.png
+    - asset/Images/Parent.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -85,16 +88,11 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-     - family: Booter-Zero-zero
-       fonts:
-         - asset: asset/Font/Booter-Zero-zero.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #        style: italic
-  # - family: Trajan Pro
-  #fonts:
-  #- asset: fonts/TrajanPro.ttf
-  #- asset: fonts/TrajanPro_Bold.ttf
-  #weight: 700
+    - family: Booter-Zero-zero
+      fonts:
+        - asset: asset/Font/Booter-Zero-zero.ttf
+        - asset: asset/Font/JosefinSans-Italic-VariableFont_wght.ttf
+          style: italic
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
