--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
     sdk: flutter
   contacts_service: "^0.6.3"
   text_scroll: ^0.1.0
+  flutter_sms: ^2.3.3
+  google_fonts: ^3.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,7 +46,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: "^0.10.0"
-  google_fonts: ^2.0.0
 flutter_icons:
   android: "launcher_icon"
   ios: true
@@ -91,6 +92,8 @@ flutter:
     - family: Booter-Zero-zero
       fonts:
         - asset: asset/Font/Booter-Zero-zero.ttf
+    - family: JosefinSans-Italic-VariableFont_wght
+      fonts:
         - asset: asset/Font/JosefinSans-Italic-VariableFont_wght.ttf
           style: italic
 
