--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
     sdk: flutter
   contacts_service: "^0.6.3"
   text_scroll: ^0.1.0
-
+  flutter_sms: ^2.3.3
+  google_fonts: ^3.0.1
+  whatsapp: ^2.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -43,8 +45,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  change_app_package_name: ^1.1.0
   flutter_launcher_icons: "^0.10.0"
-  google_fonts: ^2.0.0
 flutter_icons:
   android: "launcher_icon"
   ios: true
@@ -70,7 +72,6 @@ flutter:
   uses-material-design: true
   assets:
     - asset/icons/Gm.png
-    - asset/Images/Parent.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -91,8 +92,6 @@ flutter:
     - family: Booter-Zero-zero
       fonts:
         - asset: asset/Font/Booter-Zero-zero.ttf
-        - asset: asset/Font/JosefinSans-Italic-VariableFont_wght.ttf
-          style: italic
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
